# support-ticket-env

./: .dockerignore  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_SETUP.md  HF_README.md  README.md  VALIDATION_FIX_SUMMARY.md  VALIDATOR_FIX_COMPLETE.md  app.py  client.py  deploy.sh  deploy_to_hf.ps1  deploy_to_hf.sh  hf_space_config.md  index.html  inference.py  inference_fixed.py  landing.css  landing.html  models.py  requirements.txt  script.js  style.css  support_tickets.db  tasks.py  test_environment.py  test_inference.py  test_integration.py  test_reward.py  test_state.py  test_tasks.py
frontend/: index.html  landing.css  landing.html  script.js  style.css
scaler-hack/: README.md  app.py
scaler-hack/support_ticket_env/: .env  __init__.py  openenv.yaml
server/: ai_service.py  app.py  graders.py  support_ticket_env_environment.py
support_ticket_env/: pyproject.toml
support_ticket_env/openenv_support_ticket_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
support_ticket_env/server/: Dockerfile  __init__.py  ai_service.py  app.py  database.py  graders.py  requirements.txt  support_ticket_env_environment.py
test-space/: app.py
ticket-env/: HF_README.md  README.md  app.py  inference.py  landing.css  openenv.yaml  pyproject.toml  tasks.py
ticket-env/frontend/: index.html  landing.css  landing.html  script.js  style.css
ticket-env/support_ticket_env/: .env  README.md  __init__.py  client.py  models.py  pyproject.toml
tmp/: test_ai_gpt.py  test_ai_scenarios.py  test_analytics_endpoint.py  test_escalation_verify.py  test_tickets.py
(+14 files in other folders)
